--- a/SDL_Surface v.0.0.1
+++ b/SDL_Surface v.0.0.1
@@ -2,8 +2,9 @@
  * main.cpp
  *
  *  Created on: Feb 5, 2015
- *      Author: Aaron Hung
- *   
+ *  Author: Aaron Hung, Wenjun Qu, Garry Huang
+ *  Features: Display both screen and keypad
+ *            mouse interaction 
  */
 
 #include <SDL2/SDL.h>
