--- a/SDL_Surface v.0.0.1
+++ b/SDL_Surface v.0.0.1
@@ -4,7 +4,7 @@
  *  Created on: Feb 5, 2015
  *  Author: Aaron Hung, Wenjun Qu, Garry Huang
  *  Features: Display both screen and keypad
- *            mouse interaction 
+ *            Mouse interaction 
  */
 
 #include <SDL2/SDL.h>
