updated readme in /kiosk

--- a/kiosk/readme
+++ b/kiosk/readme
@@ -1,5 +1,5 @@
 place the kiosk folder in miniat/peripherals
-place the sconscript folder in miniat/system/console 
+place the sconscript file in the "system scon files" folder into miniat/system/console 
 in the main miniat directory, run "scons"
 cd to miniat/peripherals/kiosk
 run "make all"
